Update ContentService.java